Updated tree view to use classiest template

--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -8,7 +8,7 @@
     <link href="../../css/core.css" rel="stylesheet"> 
     <link href="../../css/table.css" rel="stylesheet">
     
-    <link href="css/tree-2.css" rel="stylesheet">
+    <link href="css/treeLinks.css" rel="stylesheet">
 
     <script type="text/javascript" src="js/treeLinks.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/treeitemLinks.js" type="text/javascript"></script>
@@ -34,13 +34,13 @@
                 aria-label="Fruits">
               <span>Fruits</span>
               <ul>
-                <li>
+                <li role="none">
                   <a role="treeitem"
                      href="https://en.wikipedia.org/wiki/Orange_%28fruit%29"> 
                       Oranges
                   </a>
                 </li>
-                <li>
+                <li role="none">
                   <a role="treeitem"
                      href="https://en.wikipedia.org/wiki/Pineapple"> 
                       Pineapple
@@ -51,19 +51,19 @@
                     aria-label="Apples">
                     <span>Apples</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/McIntosh_%28apple%29"> 
                           Macintosh
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Granny_Smith"> 
                           Granny Smith
                       </a>
                     </li>
-                    <li >
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Fuji_(apple)">
                           Fuji
@@ -71,7 +71,7 @@
                     </li>
                   </ul>
                 </li>  
-                <li >
+                <li role="none">
                   <a role="treeitem"
                      href="https://en.wikipedia.org/wiki/Banana">
                       Bananas
@@ -88,31 +88,31 @@
                           Anjou
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Williams_pear">
                           Bartlett
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Bosc_pear">
                           Bosc
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Pyrus_communis">
                           Concorde
                       </a>
                     </li>
-                    <li >
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Pyrus_communis">
                           Seckel
                       </a>
                     </li>
-                    <li >
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Pyrus_communis">
                           Starkrimson
@@ -132,19 +132,19 @@
                     aria-label="Podded Vegetables">
                   <span>Podded Vegetables</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Lentil">
                             Lentil
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Pea">
                             Pea
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Peanut">
                             Peanut
@@ -157,25 +157,25 @@
                     aria-label="Bulb and Stem Vegetables">
                   <span>Bulb and Stem Vegetables</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Asparagus">
                           Asparagus
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Celery">
                             Celery
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Leek">
                             Leek
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Onion">
                             Onion
@@ -188,25 +188,25 @@
                     aria-label="Root and Tuberous Vegetables">
                   <span>Root and Tuberous Vegetables</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Carrot">
                             Carrot
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                         <a role="treeitem"
                            href="https://en.wikipedia.org/wiki/Ginger">
                             Ginger
                         </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Parsnip">
                           Parsnip
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Potato">
                           Potato
@@ -226,19 +226,19 @@
                     aria-label="Cereal grains">
                   <span>Cereal Grains</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Barley">
                           Barley
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Oats">
                           Oats
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Rice">
                           Rice
@@ -251,25 +251,25 @@
                     aria-label="Pseudocereal grains">
                   <span>Pseudocereal Grains</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Amaranth">
                           Amaranth
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Buckwheat">
                           Bucketwheat
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Salvia_hispanica">
                           Chia
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Quinoa">
                           Quinoa
@@ -282,25 +282,25 @@
                     aria-label="Oilseeds">
                   <span>Oilseeds</span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Brassica_juncea">
                           India Mustard
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Safflower">
                           Safflower
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Flax_seed">
                           Flax Seed
                       </a>
                     </li>
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/Poppy_seed">
                           Poppy Seed
@@ -558,6 +558,19 @@
                 </ul>  
               </td>
             </tr>
+            <tr>
+              <td>
+                <code>none</code>
+              </td>
+              <td></td>
+              <td>
+                <code>li</code>
+              </td>
+              <td>
+                <ul>
+                  <li>Hides <code>li</code> element native role semantics of <code>listiem</code> from assistive technologies.</li>
+                  <li>If native role semantics of the <code>li</code> element are not removed, it could confuse some users of assistive technologies since listitems and treeitems would be interspersed with each other.</li>
+                </ul>
               </td>
             </tr>
           </tbody>
