Link to issue 193 from appendix section A1
modified aria-practices.html:
Added a link to issue 193 from the beginning of the appendix section titled:
Understanding Screen Reader Document Reading and Application Reading Modes.
Issue 193 is for drafting content for the section.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3522,6 +3522,10 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
 
     <section id="ScreenReaderModes">
       <h3>Understanding Screen Reader Document Reading and Application Reading Modes</h3>
+      <p>
+        Drafting content for this section is 
+        <a href="https://github.com/w3c/aria-practices/issues/193">issue 193.</a>
+      </p>
       <p>Placeholder for a section covering this topic that is yet to be written.</p>
     </section>
 
