--- a/aria-practices.html
+++ b/aria-practices.html
@@ -204,21 +204,24 @@
 
     <section class="widget" id="alert">
       <h3>Alert</h3>
-
       <p>
         An <a class="role-reference" href="#alert">alert</a> is an element that displays a brief, important message in a way that attracts the user's attention without interrupting the user's task.
         Dynamically rendered alerts are automatically announced by most screen readers, and in some operating systems, they may trigger an alert sound.
         It is important to note that, at this time, screen readers do not inform users of alerts that are present on the page before page load completes.
       </p>
       <p>
-        Because an alert is intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working, authors should ensure alerts do not affect the keyboard focus.
-        If there is a need to interrupt work flow, consider using an <a href="#alertdialog">alert dialog</a>
+        Because an alert is intended to provide important and potentially time-sensitive information without interfering with the user's ability to continue working, 
+        it is crucial they do not affect keyboard focus.
+        The <a href="#alertdialog">alert dialog</a> is designed for situations where interrupting work flow is necessary.
       </p>
       <p>
-        In most circumstances, authors should avoid making alerts disappear automatically.
-        An alert that disappears too quickly can lead to failure to meet <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-no-exceptions.html">WCAG 2.0 success criterion 2.2.3</a>.
-        In addition, authors should be careful to avoid overuse of alerts.
-        Frequent interruptions inhibit usability for people with visual and cognitive disabilities, leading to failures to meet <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-postponed.html">WCAG 2.0 success criterion 2.2.4</a>.
+        It is also important to avoid designing alerts that disappear automatically.
+        An alert that disappears too quickly can lead to failure to meet 
+        <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-no-exceptions.html">WCAG 2.0 success criterion 2.2.3</a>.
+        Another critical design consideration is the frequency of interruption caused by alerts.
+        Frequent interruptions inhibit usability for people with visual and cognitive disabilities, which also makes compliance with 
+        <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/time-limits-postponed.html">WCAG 2.0 success criterion 2.2.4</a> 
+        more difficult.
       </p>
 
       <section class="notoc">
