--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -261,7 +261,7 @@
            </thead>
            <tbody>
              <tr>
-               <td>Up arrow Key</td>
+               <td><kbd>Up arrow</kbd></td>
                <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
              </tr>
              <tr>
@@ -279,7 +279,7 @@
                </td>
              </tr>
              <tr>
-               <td>Right Arrow Key</td>
+               <td><kbd>Right Arrow</kbd></td>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
@@ -291,7 +291,7 @@
                </td>
              </tr>
              <tr>
-               <td>Return Key</td>
+               <td><kbd>Return</kbd></td>
                <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -299,7 +299,7 @@
                 </td>
              </tr>
              <tr>
-               <td>Space Key</td>
+               <td><kbd>Space</kbd></td>
                <td>
                   <ul>
                     <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -307,7 +307,7 @@
                 </td>
              </tr>
              <tr>
-               <td>Home Key</td>
+               <td><kbd>Home</kbd></td>
                <td>
                 <ul>
                   <li>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</li>
@@ -315,7 +315,7 @@
                 </td>
              </tr>
              <tr>
-               <td>End Key</td>
+               <td><kbd>End</kbd></td>
                <td>
                 <ul>
                   <li>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</li>
@@ -323,7 +323,7 @@
                 </td>
              </tr>
              <tr>
-               <td>a-z, A-Z</td>
+               <td><kbd>a-z, A-Z</kbd></td>
                <td>
                  <ul>
                    <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
