updated keyboard support to use KBD tags

--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -425,14 +425,15 @@
            </thead>
            <tbody>
              <tr>
-               <td>Up arrow Key</td>
+               <td><kbd>Up arrow</kbd></td>
                <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
              </tr>
              <tr>
-               <td>Down arrow Key</td>
+               <td><kbd>Down arrow</kbd></td>
                <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
-             </tr>            <tr>
-               <td>Left Arrow Key</td>
+             </tr>            
+             <tr>
+               <td><kbd>Left Arrow</kbd></td>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
@@ -443,7 +444,7 @@
                </td>
              </tr>
              <tr>
-               <td>Right Arrow Key</td>
+               <td><kbd>Right Arrow</kbd></td>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
@@ -455,7 +456,7 @@
                </td>
              </tr>
              <tr>
-               <td>Return Key</td>
+               <td><kbd>Return</kbd></td>
                <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -463,7 +464,7 @@
                 </td>
              </tr>
              <tr>
-               <td>Space Key</td>
+               <td><kbd>Space</kbd></td>
                <td>
                   <ul>
                     <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -471,7 +472,7 @@
                 </td>
              </tr>
              <tr>
-               <td>Home Key</td>
+               <td><kbd>Home</kbd></td>
                <td>
                 <ul>
                   <li>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</li>
@@ -479,7 +480,7 @@
                 </td>
              </tr>
              <tr>
-               <td>End Key</td>
+               <td><kbd>End</kbd></td>
                <td>
                 <ul>
                   <li>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</li>
@@ -487,7 +488,7 @@
                 </td>
              </tr>
              <tr>
-               <td>a-z, A-Z</td>
+               <td><kbd>a-z, A-Z</kbd></td>
                <td>
                  <ul>
                    <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
@@ -496,7 +497,7 @@
                </td>
              </tr>
              <tr>
-               <td>*</td>
+               <td><kbd>*</kbd></td>
                <td>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.
                </td>
              </tr>
