--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -265,10 +265,11 @@
                <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
              </tr>
              <tr>
-               <td>Down arrow Key</td>
+               <td><kbd>Down arrow</kbd></td>
                <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
-             </tr>            <tr>
-               <td>Left Arrow Key</td>
+             </tr>            
+             <tr>
+               <td><kbd>Left Arrow</kbd></td>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
@@ -332,7 +333,7 @@
                </td>
              </tr>
              <tr>
-               <td>*</td>
+               <td><kbd>*</kbd></td>
                <td>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.
                </td>
              </tr>
