--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -473,14 +473,23 @@
          </thead>
          <tbody>
            <tr>
-             <td>Up arrow Key</td>
-             <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
+             <td><kbd>Up arrow</kbd></td>
+             <td>
+                <ul>
+                 <li>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</li>
+                </ul> 
+              </td>
            </tr>
            <tr>
-             <td>Down arrow Key</td>
-             <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
-           </tr>            <tr>
-             <td>Left Arrow Key</td>
+             <td><kbd>Down arrow</kbd></td>
+             <td>
+                <ul>
+                 <li>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</li>
+                </ul> 
+              </td>
+           </tr>            
+           <tr>
+             <td><kbd>Left Arrow</kbd></td>
              <td>
                <ul>
                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
@@ -491,7 +500,7 @@
              </td>
            </tr>
            <tr>
-             <td>Right Arrow Key</td>
+             <td><kbd>Right Arrow</kbd></td>
              <td>
                <ul>
                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
@@ -503,7 +512,7 @@
              </td>
            </tr>
            <tr>
-             <td>Return Key</td>
+             <td><kbd>Return</kbd></td>
              <td>
               <ul>
                 <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -511,7 +520,7 @@
               </td>
            </tr>
            <tr>
-             <td>Space Key</td>
+             <td><kbd>Space</kbd></td>
              <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -519,7 +528,7 @@
               </td>
            </tr>
            <tr>
-             <td>Home Key</td>
+             <td><kbd>Home</kbd></td>
              <td>
               <ul>
                 <li>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</li>
@@ -527,7 +536,7 @@
               </td>
            </tr>
            <tr>
-             <td>End Key</td>
+             <td><kbd>End</kbd></td>
              <td>
               <ul>
                 <li>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</li>
@@ -536,7 +545,7 @@
              </td>
            </tr>
            <tr>
-             <td>a-z, A-Z</td>
+             <td><kbd>a-z, A-Z</kbd></td>
              <td>
                <ul>
                  <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
@@ -545,7 +554,7 @@
              </td>
            </tr>
            <tr>
-             <td>*</td>
+             <td><kbd>*</kbd></td>
              <td>
               <ul>
                 <li>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.</li>
