--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Action Treeview (computed properties) | WAI-ARIA Authoring Practices 1.1</title>
+    <title>File Directory Treeview Example (computed properties) | WAI-ARIA Authoring Practices 1.1</title>
     
     <link href="../../css/core.css" rel="stylesheet"> 
     <link href="../../css/table.css" rel="stylesheet">
@@ -20,7 +20,7 @@
   
   <body>
     <main>
-      <h1>Action Treeview (computed properties)</h1>
+      <h1>File Directory Treeview Example (computed properties)</h1>
 
       <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../aria-practices.html#TreeView">ARIA Treeview Design Pattern</a> for simulation of a file selector.   This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.   The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
 
@@ -262,11 +262,19 @@
            <tbody>
              <tr>
                <td><kbd>Up arrow</kbd></td>
-               <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
+               <td>
+                <ul>
+                  <li>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</li>
+                </ul>
+               </td>
              </tr>
              <tr>
                <td><kbd>Down arrow</kbd></td>
-               <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
+               <td>
+                <ul>
+                  <li>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</li>
+                </ul>
+               </td>
              </tr>            
              <tr>
                <td><kbd>Left Arrow</kbd></td>
@@ -334,7 +342,10 @@
              </tr>
              <tr>
                <td><kbd>*</kbd></td>
-               <td>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.
+               <td>
+                <ul>
+                  <li>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.</li>
+                </ul>  
                </td>
              </tr>
            </tbody>
